examples/neg/selecting_from_datatype.effekt
module examples/neg/selecting_from_datatype


type MyList {
  Bar(myHead: Int)
}

def foo(l: MyList) = myHead(l)

def main() = foo(Bar(42))